lessons/deployment-2-replicas.yaml
#-------------------------------------------------------------
apiVersion : apps/v1
kind: Deployment
metadata:
  name: my-web-deployment-replicas
  labels:
    app  : my-k8s-application
    env  : prod
    owner: jenya-topol
spec:
  replicas: 4
  selector:
    matchLabels:
      project: cia
  template:
    metadata:
      labels:
        project: cia
    spec:
      containers:
        - name : cia-web
          image: adv4000/k8sphp:version1
          ports:
            - containerPort: 80
