lessons/deployment-3-autoscaling.yaml
#-------------------------------------------------------------
apiVersion : apps/v1
kind: Deployment
metadata:
  name: my-web-deployment-autoscaling
  labels:
    app  : my-k8s-application
    env  : prod
    owner: jenya-topol
spec:
#  replicas: 2   # Don't need this anymore as we are using HorizontalPodAutoscaler
  selector:
    matchLabels:
      project: mossad
  template:
    metadata:
      labels:
        project: mossad
    spec:
      containers:
        - name : mossad-web
          image: adv4000/k8sphp:version2
          ports:
            - containerPort: 80
