lessons/service-3-loadbalancer-autoscaling.yaml
#-------------------------------------------------------------------------------------
apiVersion : apps/v1
kind: Deployment
metadata:
  name: my-web-deployment-autoscaling
  labels:
    app : my-k8s-deployment
spec:
  selector:
    matchLabels:
      project: xyz
  template:
    metadata:
      labels:
        project: xyz   # Service will look for those PODS Labels!!!
    spec:
      containers:
        - name : xyz-web
          image: adv4000/k8sphp:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: my-autoscaling-pod-service
  labels:
     env  : prod
     owner: 
spec:
  selector:
    project: xyz      # Selecting PODs with those Labels
  ports:
    - name      : app-listener
      protocol  : TCP
      port      : 80  # Port on Load Balancer
      targetPort: 80  # Port on Pod
  type: LoadBalancer
